Implemented remaining requirements for identity management feature
1. Password shall atleast be 8 characters long with a lowercase, uppercase, special character and a number.
-  If password provided does not conform to requirements, SIGNUP API will fail with the following message:
   "Password must be atleast 8 characters with a lowercase character, uppercase character, special character and a number."
-  This also applies to CHANGE PASSWORD and CONFIRM FORGOT PASSWORD apis.

2. OTP format for email has been customized to include "Bridgetek IoT Portal".
-  Subject: Bridgetek IoT Portal verification code
-  Body: Your Bridgetek IoT Portal verification code is {XXXXXX}.
-  Note that SMS OTP format could not be changed

3. SMS MFA has been customized to include "Bridgetek IoT Portal".
-  Your Bridgetek IoT Portal authentication code is {XXXXXX}.

4. GET USER INFO now returns the last successful and failed logins
-  Last failed login is included to raise fraud awareness (ex. account being hacked)
-  refer to last_login and last_failed_login

--- a/webapp/src/ionicapp/www/templates/deviceLDSBUS.html
+++ b/webapp/src/ionicapp/www/templates/deviceLDSBUS.html
@@ -24,7 +24,7 @@
       <div class="item item-body" id="deviceLDSBUS-list-item-container51" ng-click="getLDSUs()">
         <div id="deviceLDSBUS-markdown536" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
-            <strong> LDSUs </strong> ({{ ldsbus[0].ldsus.length }})</p>
+            <strong> LDSUs </strong> ({{ ldsbus.length ? ldsbus[0].ldsus.length : 0 }})</p>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
       <div class="item item-body" id="deviceLDSBUS-list-item-container37" ng-click="getSensors()">
         <div id="deviceLDSBUS-markdown528" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
-            <strong> Sensors </strong> ({{ ldsbus[0].sensors.length }})</p>
+            <strong> Sensors </strong> ({{ ldsbus.length ? ldsbus[0].sensors.length : 0 }})</p>
         </div>
       </div>
     </div>
@@ -40,10 +40,10 @@
       <div class="item item-body" id="deviceLDSBUS-list-item-container40" ng-click="getActuators()">
         <div id="deviceLDSBUS-markdown530" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
-            <strong> Actuators </strong> ({{ ldsbus[0].actuators.length }})</p>
+            <strong> Actuators </strong> ({{ ldsbus.length ? ldsbus[0].actuators.length : 0 }})</p>
         </div>
       </div>
     </div>
-    <button id="deviceLDSBUS-button225" ng-click="submitRefresh()" class="button button-positive button-block">Scan</button>
+    <button id="deviceLDSBUS-button225" ng-click="scanLDSBUS()" class="button button-positive button-block">Scan</button>
   </ion-content>
 </ion-view>
