--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -19,11 +19,11 @@
         </label>
         <label class="item item-input" id="signup-input16" name="input-password">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="Min 6 chars" ng-model="data.password">
+          <input type="password" placeholder="Min 8 chars w/upper, lower, special, number" ng-model="data.password">
         </label>
         <label class="item item-input" id="signup-input33" name="input-password2">
           <span class="input-label">Confirm Password</span>
-          <input type="password" placeholder="Min 6 chars" ng-model="data.password2">
+          <input type="password" placeholder="Min 8 chars w/upper, lower, special, number" ng-model="data.password2">
         </label>
       </ion-list>
       <button id="signup-button7" ng-click="submit()" class="button button-positive button-block">SIGN UP</button>
