--- a/webapp/src/ionicapp/www/templates/addGatewayGroup.html
+++ b/webapp/src/ionicapp/www/templates/addGatewayGroup.html
@@ -12,7 +12,13 @@
       <label class="item item-input item-stacked-label" id="addGatewayGroup-input176" name="input-name">
         <input type="text" placeholder="My Gateway Group" ng-model="data.devicegroupname">
       </label>
-      <button id="addGatewayGroup-button169" ng-click="submit()" class="button button-positive button-block">SAVE</button>
+    </form>
+    <div id="addGatewayGroup-markdown553" class="show-list-numbers-and-dots">
+      <p style="color:#AAAAAA;">Please select gateways to be added to the gateway group.</p>
+    </div>
+    <form id="addGatewayGroup-form256" class="list">
+      <ion-checkbox id="addGatewayGroup-checkbox60" ng-repeat="device in devices" ng-model="device.enabled">{{ device.devicename }}</ion-checkbox>
+      <button id="addGatewayGroup-button228" ng-click="submit()" class="button button-positive button-block">SAVE</button>
     </form>
   </ion-content>
 </ion-view>
