Updated and added gateway group APIs

--- a/webapp/src/ionicapp/www/templates/addGatewayGroup.html
+++ b/webapp/src/ionicapp/www/templates/addGatewayGroup.html
@@ -1,4 +1,4 @@
-<ion-view title="Add Gateway Group" hide-back-button="true" nav-transition="none" id="page63" style="background-color:#FFFFFF;" class="page_width_small">
+<ion-view title="Add Gateway Group" hide-back-button="true" nav-transition="none" id="page63" style="background-color:#FFFFFF;" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
@@ -8,7 +8,6 @@
       <div id="addGatewayGroup-markdown519" class="show-list-numbers-and-dots">
         <p style="color:#AAAAAA;">Please enter a name for this gateway group.</p>
       </div>
-      <ion-item class="item-divider" id="addGatewayGroup-list-item-divider24"> Name</ion-item>
       <label class="item item-input item-stacked-label" id="addGatewayGroup-input176" name="input-name">
         <input type="text" placeholder="My Gateway Group" ng-model="data.devicegroupname">
       </label>
