--- a/webapp/src/ionicapp/www/templates/updateGatewayGroup.html
+++ b/webapp/src/ionicapp/www/templates/updateGatewayGroup.html
@@ -15,7 +15,7 @@
     <div class="spacer" style="height: 12px;"></div>
     <form id="updateGatewayGroup-form234" class="list">
       <div id="updateGatewayGroup-markdown153" class="show-list-numbers-and-dots">
-        <p style="color:#3C5A99;">Gateway group information</p>
+        <p style="color:#AAAAAA;">Update the gateway group name</p>
       </div>
       <label class="item item-input" id="updateGatewayGroup-input174" name="input-devicegroupname">
         <span class="input-label">Name</span>
@@ -26,7 +26,7 @@
     </form>
     <form id="updateGatewayGroup-form235" class="list" ng-show="devicegroup.length > 0">
       <div id="updateGatewayGroup-markdown472" class="show-list-numbers-and-dots">
-        <p style="color:#3C5A99;">Gateways</p>
+        <p style="color:#AAAAAA;">Add or remove gateways in the gateway group</p>
       </div>
       <ion-checkbox id="updateGatewayGroup-checkbox56" ng-repeat="device in devicegroup" ng-model="device.enabled">{{ device.devicename }}</ion-checkbox>
       <button id="updateGatewayGroup-button172" ng-click="setDevicesToDeviceGroup(data.devicegroupname)" class="button button-positive button-block">Update gateways</button>
@@ -34,7 +34,7 @@
     </form>
     <form id="updateGatewayGroup-form236" class="list">
       <div id="updateGatewayGroup-markdown474" class="show-list-numbers-and-dots">
-        <p style="color:#3C5A99;">Add a gateway to the gateway group</p>
+        <p style="color:#AAAAAA;">Add a gateway to the gateway group</p>
       </div>
       <label class="item item-select" id="updateGatewayGroup-select107">
         <span class="input-label">Device</span>
