--- a/webapp/src/ionicapp/www/templates/gateways.html
+++ b/webapp/src/ionicapp/www/templates/gateways.html
@@ -8,14 +8,15 @@
         <input type="text" placeholder="Search" ng-model="data.devices_filter" ng-keypress="submitSearch($event)">
       </label>
       <div id="gateways-button-bar11" class="button-bar">
-        <button id="gateways-button164" ng-click="changeActiveSection(1)" style="font-weight:300;color:#AAAAAA;font-size:12px;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">Gateways</button>
-        <button id="gateways-button165" ng-click="changeActiveSection(2)" style="font-weight:300;color:#AAAAAA;font-size:12px;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">Gateway Groups</button>
+        <button id="gateways-button164" ng-click="changeActiveSection(1)" style="font-weight:300;color:#AAAAAA;font-size:12px;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">All</button>
+        <button id="gateways-button165" ng-click="changeActiveSection(2)" style="font-weight:300;color:#AAAAAA;font-size:12px;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">Groups</button>
+        <button id="gateways-button169" ng-click="changeActiveSection(3)" style="font-weight:300;color:#AAAAAA;font-size:12px;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">Ungrouped</button>
       </div>
     </form>
     <div id="gateways-markdown36" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ devices_counthdr }}</p>
     </div>
-    <div class="list card" id="gateways-card27" ng-repeat="device in devices" ng-show="activeSection==1">
+    <div class="list card" id="gateways-card27" ng-repeat="device in devices" ng-show="activeSection==1 || activeSection==3">
       <div class="item item-body" id="gateways-list-item-container30" ng-click="viewDevice(device)">
         <div id="gateways-markdown154" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
@@ -43,8 +44,8 @@
         </div>
       </div>
     </div>
-    <div class="list card" id="gateways-card29" ng-repeat="group in devicegroups" ng-show="activeSection==2">
-      <div class="item item-body" id="gateways-list-item-container31" ng-click="viewDevice(group)">
+    <div class="list card" id="gateways-card29" ng-repeat="group in devicegroups" ng-show="activeSection==2 || activeSection==1">
+      <div class="item item-body" id="gateways-list-item-container31" ng-click="viewDeviceGroup(group)">
         <div id="gateways-markdown466" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
             <strong> {{ group.groupname }} </strong>
@@ -53,7 +54,7 @@
       </div>
       <div id="gateways-container25">
         <div id="gateways-markdown476" class="show-list-numbers-and-dots card_label_devicegroups">
-          <p style="color:#888888;font-size:12px;"> {{ group.devices.length &gt; 0 ? "GATEWAYS: " + group.devices : "GATEWAYS: None"}}</p>
+          <p style="color:#888888;font-size:12px;"> {{ group.devices.length &gt; 0 ? group.devices.length + " Gateways: " + group.devices : "0 Gateways"}}</p>
         </div>
       </div>
     </div>
