--- a/webapp/src/ionicapp/www/templates/gateways.html
+++ b/webapp/src/ionicapp/www/templates/gateways.html
@@ -52,7 +52,7 @@
           </p>
         </div>
       </div>
-      <div id="gateways-container25">
+      <div id="gateways-container25" ng-click="updateDeviceGroup(group)">
         <div id="gateways-markdown476" class="show-list-numbers-and-dots card_label_devicegroups">
           <p style="color:#888888;font-size:12px;"> {{ group.devices.length &gt; 0 ? group.devices.length + " Gateways: " + group.devices : "0 Gateways"}}</p>
         </div>
