Updated LDSU and sensor registration

--- a/webapp/src/ionicapp/www/templates/gatewayDescriptor.html
+++ b/webapp/src/ionicapp/www/templates/gatewayDescriptor.html
@@ -19,39 +19,37 @@
         <p style="color:#444444;">{{ descriptor }}</p>
       </div>
       <div id="gatewayDescriptor-markdown445" class="show-list-numbers-and-dots">
-        <p style="color:#444444;">UUID: {{ descriptor.UUID }}</p>
+        <p style="color:#444444;">UUID: {{ descriptor.UUID }} // UUID</p>
 
-        <p style="color:#444444;">SNO: {{ descriptor.SNO }}</p>
+        <p style="color:#444444;">SNO: {{ descriptor.SNO }} // Serial Number</p>
 
-        <p style="color:#444444;">PMAC: {{ descriptor.PMAC }}</p>
+        <p style="color:#444444;">PMAC: {{ descriptor.PMAC }} // PoE MAC ID</p>
 
-        <p style="color:#444444;">WMAC: {{ descriptor.WMAC }}</p>
+        <p style="color:#444444;">WMAC: {{ descriptor.WMAC }} // WiFi MAC ID</p>
 
-        <p style="color:#444444;">MOD: {{ descriptor.MOD }}</p>
+        <p style="color:#444444;">MOD: {{ descriptor.MOD }} // Model Number</p>
 
-        <p style="color:#444444;">PRV: {{ descriptor.PRV }}</p>
+        <p style="color:#444444;">PRV: {{ descriptor.PRV }} // Product Version</p>
 
-        <p style="color:#444444;">FWV: {{ descriptor.FWV }}</p>
+        <p style="color:#444444;">FWV: {{ descriptor.FWV }} // Firmware Version and date</p>
 
-        <p style="color:#444444;">ICAC: {{ descriptor.ICAC }}</p>
+        <p style="color:#444444;">ICAC: {{ descriptor.ICAC }} // Sensor Cache Storage Size</p>
 
-        <p style="color:#444444;">IPRT: {{ descriptor.IPRT }}</p>
+        <p style="color:#444444;">IPRT: {{ descriptor.IPRT }} // Number of LDS Ports</p>
 
-        <p style="color:#444444;">ICFG: {{ descriptor.ICFG }}</p>
+        <p style="color:#444444;">ICFG: {{ descriptor.ICFG }} // Configuration Storage</p>
 
-        <p style="color:#444444;">WGPS: {{ descriptor.WGPS }}</p>
+        <p style="color:#444444;">MLG: {{ descriptor.MLG }} // Maximum LDSUs per Gateway</p>
 
-        <p style="color:#444444;">WMLP: {{ descriptor.WMLP }}</p>
+        <p style="color:#444444;">M2M: {{ descriptor.M2M }} // Machine to machine config </p>
 
-        <p style="color:#444444;">IUPC: {{ descriptor.IUPC }}</p>
+        <p style="color:#444444;">WGPS: {{ descriptor.WGPS }} // GPS Location</p>
 
-        <p style="color:#444444;">IUPE: {{ descriptor.IUPE }}</p>
+        <p style="color:#444444;">WASC: {{ descriptor.WASC }} // Auto-scan</p>
 
-        <p style="color:#444444;">WASC: {{ descriptor.WASC }}</p>
+        <p style="color:#444444;">WSCS: {{ descriptor.WSCS }} // Sensor Cache Status</p>
 
-        <p style="color:#444444;">WSCS: {{ descriptor.WSCS }}</p>
-
-        <p style="color:#444444;">OBJ: {{ descriptor.OBJ }}</p>
+        <p style="color:#444444;">OBJ: {{ descriptor.OBJ }} // Sensor Cache Status</p>
       </div>
     </form>
   </ion-content>
