--- a/webapp/src/ionicapp/www/templates/deviceLDSBUS.html
+++ b/webapp/src/ionicapp/www/templates/deviceLDSBUS.html
@@ -12,11 +12,13 @@
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
-    <div id="deviceLDSBUS-button-bar14" class="button-bar">
-      <button id="deviceLDSBUS-button219" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-positive button-small button-block">LDS BUS 1</button>
-      <button id="deviceLDSBUS-button220" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-positive button-small button-block">LDS BUS 2</button>
-      <button id="deviceLDSBUS-button222" ng-class="{'active': data.activeSection==3}" ng-click="changeSection(3)" class="button button-positive button-small button-block">LDS BUS 3</button>
-    </div>
+    <form id="deviceLDSBUS-form191" class="list">
+      <div id="deviceLDSBUS-button-bar14" class="button-bar">
+        <button id="deviceLDSBUS-button219" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" style="font-weight:300;color:#AAAAAA;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">LDS BUS 1</button>
+        <button id="deviceLDSBUS-button220" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" style="font-weight:300;color:#AAAAAA;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">LDS BUS 2</button>
+        <button id="deviceLDSBUS-button222" ng-class="{'active': data.activeSection==3}" ng-click="changeSection(3)" style="font-weight:300;color:#AAAAAA;border-radius:256px 256px 256px 256px;" class="button button-stable button-small button-block">LDS BUS 3</button>
+      </div>
+    </form>
     <div id="deviceLDSBUS-markdown542" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ ldsbus[0].ldsus.length }} LDSUs detected with {{ ldsbus[0].sensors.length }} sensors and {{ ldsbus[0].actuators.length }} actuators</p>
     </div>
