--- a/webapp/src/ionicapp/www/templates/gateway.html
+++ b/webapp/src/ionicapp/www/templates/gateway.html
@@ -140,7 +140,7 @@
         </div>
       </div>
     </div>
-    <div class="list card d3container" id="gateway-card219">
+    <div class="list card d3container" id="gateway-card219" ng-show="0">
       <div class="hierarchychart" width="1000" height="450">
         <svg id="{{data.devicename_ex}}" width="1000" height="450">
         </svg>
