Updated enabling/configuring/retrieving LDSU sensor

--- a/webapp/src/ionicapp/www/templates/gateway.html
+++ b/webapp/src/ionicapp/www/templates/gateway.html
@@ -84,7 +84,7 @@
       </div>
     </div>
     <div class="spacer" style="width: 747.778px; height: 50px;"></div>
-    <div class="list card widget_button_half_device" id="gateway-card224" ng-click="submitUART()">
+    <div class="list card widget_button_half_device" id="gateway-card224" ng-click="submitUART()" ng-show="0">
       <div class="item item-body" id="gateway-list-item-container45">
         <div id="gateway-markdown531" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
@@ -93,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="list card widget_button_half_device" id="gateway-card222" ng-click="submitGPIO()">
+    <div class="list card widget_button_half_device" id="gateway-card222" ng-click="submitGPIO()" ng-show="0">
       <div class="item item-body" id="gateway-list-item-container36">
         <div id="gateway-markdown526" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
@@ -103,7 +103,7 @@
       </div>
     </div>
     <div class="spacer" style="height: 3px;"></div>
-    <div class="list card widget_button_half_device" id="gateway-card213" ng-click="submitI2C()">
+    <div class="list card widget_button_half_device" id="gateway-card213" ng-click="submitI2C()" ng-show="0">
       <div class="item item-body" id="gateway-list-item-container46">
         <div id="gateway-markdown514" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
@@ -112,7 +112,7 @@
         </div>
       </div>
     </div>
-    <div class="list card widget_button_half_device" id="gateway-card214" ng-click="submitADC()">
+    <div class="list card widget_button_half_device" id="gateway-card214" ng-click="submitADC()" ng-show="0">
       <div class="item item-body" id="gateway-list-item-container47">
         <div id="gateway-markdown515" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
@@ -122,7 +122,7 @@
       </div>
     </div>
     <div class="spacer" style="width: 747.778px; height: 3px;"></div>
-    <div class="list card widget_button_half_device" id="gateway-card215" ng-click="submit1WIRE()">
+    <div class="list card widget_button_half_device" id="gateway-card215" ng-click="submit1WIRE()" ng-show="0">
       <div class="item item-body" id="gateway-list-item-container48">
         <div id="gateway-markdown516" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
@@ -131,7 +131,7 @@
         </div>
       </div>
     </div>
-    <div class="list card widget_button_half_device" id="gateway-card216" ng-click="submitTPROBE()">
+    <div class="list card widget_button_half_device" id="gateway-card216" ng-click="submitTPROBE()" ng-show="0">
       <div class="item item-body" id="gateway-list-item-container49">
         <div id="gateway-markdown518" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
