--- a/webapp/src/ionicapp/www/templates/lDSUs.html
+++ b/webapp/src/ionicapp/www/templates/lDSUs.html
@@ -51,7 +51,8 @@
       <ion-item id="lDSUs-list-item19" readonly="">{{ ldsu.descriptor.PRV }}</ion-item>
       <ion-item class="item-divider" id="lDSUs-list-item-divider34"> Product Name</ion-item>
       <ion-item id="lDSUs-list-item20" readonly="">{{ ldsu.descriptor.NAME }}</ion-item>
-      <button id="lDSUs-button224" ng-click="identifyLDSU()" class="button button-positive button-block">Identify device</button>
+      <button id="lDSUs-button224" ng-click="identifyLDSU()" class="button button-positive button-block">Identify LDSU</button>
+      <button id="lDSUs-button115" ng-click="deleteLDSU()" class="button button-positive button-block">Delete LDSU</button>
       <div class="spacer" style="height: 100px;"></div>
     </form>
   </ion-content>
