--- a/webapp/src/ionicapp/www/templates/sensors.html
+++ b/webapp/src/ionicapp/www/templates/sensors.html
@@ -26,13 +26,13 @@
               <strong> {{ sensor.sensorname }} </strong>
             </p>
           </div>
-        </div>
-        <div id="sensors-markdown546" class="show-list-numbers-and-dots card_label_devicegroups">
-          <p style="margin-top:0px;color:#888888;font-size:12px;">{{ sensor.class }}</p>
+          <div id="sensors-markdown333" class="show-list-numbers-and-dots">
+            <p style="margin-top:0px;color:#888888;font-size:12px;">{{ sensor.class }}</p>
+          </div>
         </div>
         <div id="sensors-container97">
-          <form id="sensors-form188" class="list">
-            <ion-toggle toggle-class="toggle-positive" id="sensors-toggle28" ng-show="sensor.configured" ng-model="sensor.enabled_bool" ng-click="changeDevice(sensor, sensor.enabled_bool)">.</ion-toggle>
+          <form id="sensors-form259" class="list">
+            <ion-toggle toggle-class="toggle-positive" id="sensors-toggle33" ng-show="sensor.configured" ng-model="sensor.enabled_bool" ng-click="enableSensor(sensor, sensor.enabled_bool)">.</ion-toggle>
           </form>
         </div>
       </div>
