Updated hierarchy chart for LDS support and some UI improvements

--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -31,7 +31,7 @@
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item8" ui-sref="menu.sensorDashboard({&quot;devicename&quot;:&quot;All devices&quot;,&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;,&quot;devicestatus&quot;:&quot;&quot;,&quot;deviceid&quot;:&quot;&quot;,&quot;serialnumber&quot;:&quot;&quot;,&quot;location&quot;:&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-ios-analytics"></i>Dashboard</ion-item>
+          <i class="icon ion-ios-analytics"></i>Dashboards</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item18" ui-sref="menu.alerts({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-alert-circled"></i>Alerts</ion-item>
