Supported plugging and unplugging of LDSUs

--- a/webapp/src/ionicapp/www/templates/lDSUs.html
+++ b/webapp/src/ionicapp/www/templates/lDSUs.html
@@ -26,9 +26,12 @@
               <strong> {{ ldsu.LABL }} </strong>
             </p>
           </div>
+          <div id="lDSUs-markdown347" class="show-list-numbers-and-dots">
+            <p style="margin-top:0px;color:#444444;font-size:12px;">{{ ldsu.UID }}</p>
+          </div>
         </div>
         <div id="lDSUs-markdown540" class="show-list-numbers-and-dots card_label_devicegroups">
-          <p style="margin-top:0px;color:#888888;font-size:12px;">{{ ldsu.UID }}</p>
+          <p style="margin-top:0px;color:#888888;font-size:12px;">{{ ldsu.status }}</p>
         </div>
       </div>
     </form>
