--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -12,7 +12,7 @@
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
-    <button id="humidity-button139" ng-click="viewXXXDevice()" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear icon-right ion-android-settings">{{ data.sensor.sensorname }} - {{data.source}} {{ data.sensor.number }}</button>
+    <button id="humidity-button139" ng-click="viewXXXDevice()" style="font-weight:500;font-size:18px;" class="button button-dark button-block button-clear icon-right ion-android-settings">{{ data.sensor.sensorname }}</button>
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="humidity-form169" class="list">
       <div id="humidity-markdown306" class="show-list-numbers-and-dots">
